squash! ead9765958dec2932c9a4cd6a953303d55feb87b

MDEV-33737 The way of ignoring alter-algorithm is inconsistent with
           other options and with itself